--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
 					<clearOutputDir>false</clearOutputDir>
 				</configuration>
 			</plugin>
+			<plugin>
+		        <groupId>com.google.cloud.tools</groupId>
+		        <artifactId>appengine-maven-plugin</artifactId>
+		        <version>1.3.2</version>
+		        <configuration>
+		          <version>1</version>
+		        </configuration>
+		      </plugin>
 		</plugins>
 	</build>
 
